--- a/client/src/main.css
+++ b/client/src/main.css
@@ -1,3 +1,4 @@
+@import "./styles/theme.css";
 @import "./styles/diary.css";
 
 * {
@@ -7,7 +8,6 @@
 }
 
 body {
-  padding: 0 15px;
   overflow: hidden;
 }
 
@@ -17,6 +17,11 @@ input {
   border: 0;
   outline-style: none;
   resize: vertical;
+}
+
+#root {
+  background: var(--surface-color);
+  padding: 0 20px;
 }
 
 .page {
