--- a/client/src/styles/diary.css
+++ b/client/src/styles/diary.css
@@ -1,3 +1,12 @@
+* {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
 .Diary__title,
 .Diary__title--typing,
 .Diary__title--empty {
@@ -47,14 +56,16 @@
 
   font-size: 0;
   line-height: 0;
+
+  margin-left: 10px;
+}
+
+.Diary__colorList > li:first-child {
+  margin-left: 0;
 }
 
 .Diary__color {
   border: 1px solid #959595;
-}
-
-.Diary__color + .Diary__color {
-  margin-left: 10px;
 }
 
 .Diary__color--selected {
@@ -67,26 +78,36 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
+  align-content: flex-start;
 }
 
 .Diary__song {
+  display: flex;
+
   max-width: 100%;
   padding: 5px 10px;
+  margin-right: 10px;
   border-radius: 12px;
-
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 16px;
-  letter-spacing: 0em;
-  text-align: center;
 
   text-overflow: ellipsis;
   white-space: nowrap;
   word-wrap: normal;
-  width: 300px;
   overflow: hidden;
+  
+  background: var(--main-color);
 }
 
-.Diary__article {
+.Diary__article,
+.Diary__article--typing,
+.Diary__article--empty {
+  margin-top: 15px;
+}
+
+.Diary__article--typing > textarea {
+  width: 100%;
+  resize: none;
+  overflow-y: hidden;
+  padding: 1.1em; 
+  padding-bottom: 0.2em;
+  line-height: 1.6;
 }
