--- a/client/src/main.css
+++ b/client/src/main.css
@@ -1,6 +1,5 @@
 @import "./styles/theme.css";
 @import "./styles/diary.css";
-@import "./styles/search.css";
 
 * {
   margin: 0;
@@ -25,6 +24,7 @@ button {
   border: 0;
   background: none;
   cursor: pointer;
+  outline-style: none;
 }
 
 #root {
@@ -34,4 +34,19 @@ button {
 
 .page {
   min-height: 100vh;
+}
+
+.popup {
+  padding: 0 20px;
+  width: 100vw;
+  min-height: 100vh;
+  
+  box-sizing: border-box;
+
+  position: absolute;
+  z-index: 10;
+  top: 0;
+  left: 0;
+
+  background: var(--surface-color);
 }
