--- a/client/src/styles/diary.css
+++ b/client/src/styles/diary.css
@@ -7,18 +7,24 @@
   text-align: left;
 }
 
-.Diary__header {
+/* header */
+
+.Diary__header,
+.Search__header {
   height: 63px;
 
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
 
-.Diary__goBack {
+.Diary__goBack, .Search__close {
+  width: 40px;
 }
 
-.Diary__date {
+.Diary__date,
+.Search__title {
   /* font-family: Post No Bills Colombo SemiBold; */
   font-size: 20px;
   font-style: normal;
@@ -28,12 +34,15 @@
   text-align: center;
 }
 
-.Diary__submitDiv {
-  width:32px;
+.Diary__submitDiv,
+.Search__submitDiv {
+  width: 40px;
 
   display: flex;
   justify-content: center;
   align-items: center;
+  
+  text-align: right;
 }
 
 .Diary__title,
@@ -65,6 +74,8 @@
   border-bottom: 3px solid var(--main-color);
   font-size: 20px;
 }
+
+/* page */
 
 .Diary__wrapper {
   padding: 20px 0;
@@ -115,6 +126,7 @@
 
   max-width: 100%;
   padding: 5px 10px;
+  margin-bottom: 7px;
   margin-right: 10px;
   border-radius: 12px;
 
@@ -146,3 +158,5 @@
   font-size: 14px;
   line-height: 1.6;
 }
+
+/* search */
