--- a/client/src/main.css
+++ b/client/src/main.css
@@ -1,4 +1,5 @@
 @import "./styles/theme.css";
+@import "./styles/calendar.css";
 @import "./styles/diary.css";
 
 * {
@@ -18,6 +19,11 @@ input {
   border: 0;
   outline-style: none;
   resize: vertical;
+}
+
+select {
+  outline-style: none;
+  border: 0;
 }
 
 button {
